--- a/src/components/PFooter/PFooter.scss
+++ b/src/components/PFooter/PFooter.scss
@@ -1,7 +1,6 @@
 @use "../../styles/utilities" as *;
 
 $footer-background-color: color("grey", "300") !default;
-$footer-bottom-border: 10px solid color("primary", "500") !default;
 $footer-padding: spacing("xl") !default;
 $footer-spacing: spacing("xl") !default;
 
@@ -11,7 +10,6 @@ $footer-spacing: spacing("xl") !default;
 
   .p-panel {
     background-color: $footer-background-color;
-    border-bottom: $footer-bottom-border;
     margin-top: $footer-spacing;
     padding: $footer-padding 0;
   }
